# supmcu-rs

./: Cargo.toml  flake.nix  test-definition.json
src/: lib.rs
src/supmcu/: discovery.rs  i2c.rs  mod.rs  parsing.rs
tests/: test_parsing.rs
