[package]
name = "supmcu-rs"
version = "0.5.0"
edition = "2021"
description = "Library for easily interfacing with Pumpkin SupMCU Modules over I2C"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "^1.0"
byteorder = "1.4"
i2cdev = "0.5.1"
crc = "3.0"
log = "0.4"
clap = { version = "3.2", features = ["derive"], optional = true }
tokio = { version = "1.19", features = ["rt", "time"] }
futures = "0.3"
async-scoped =  { version = "0.7", features = ["use-tokio"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
itertools = "0.10"
anyhow = "1.0.71"
async-graphql = { version = "5.0.8" }
regex = "1.8.4"
flexi_logger = "0.28.0"

[features]
default = ["cli"]
pumqry = ["dep:clap"]
cli = ["pumqry"]
checksum = []

[dev-dependencies]
rand =  { version = "0.8", features = ["small_rng"] }

[[bin]]
name = "pumqry"
required-features = ["pumqry"]

[profile.dev]
panic = "unwind"
strip = true

[profile.release]
strip = true

[profile.production]
inherits = "release"
lto = true

